[gd_scene load_steps=11 format=2]

[ext_resource path="res://levels/level1/Level1.gd" type="Script" id=1]
[ext_resource path="res://environment/Boundary.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/Interface.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://actors/enemy/Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/background_sandyShallows.png" type="Texture" id=6]
[ext_resource path="res://interface/theme/default_theme.tres" type="Theme" id=7]
[ext_resource path="res://interface/label_bg.png" type="Texture" id=8]
[ext_resource path="res://assets/game-loop.wav" type="AudioStream" id=9]

[sub_resource type="AnimationNodeStateMachinePlayback" id=1]

[node name="Level1" type="Node2D"]
script = ExtResource( 1 )

[node name="Boundary" parent="." instance=ExtResource( 2 )]
position = Vector2( 684.214, 62.4843 )

[node name="Boundary2" parent="." instance=ExtResource( 2 )]
editor/display_folded = true
position = Vector2( 1344.91, 263.25 )
rotation = 1.5708

[node name="CollisionShape2D" parent="Boundary2" index="0"]
position = Vector2( -4.65396, 613.282 )

[node name="Boundary4" parent="." instance=ExtResource( 2 )]
editor/display_folded = true
position = Vector2( 9.93738, 271.863 )
rotation = 1.5708

[node name="Boundary3" parent="." instance=ExtResource( 2 )]
position = Vector2( 682.559, 467.241 )

[node name="InterfaceLayer" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="Interface" parent="InterfaceLayer" instance=ExtResource( 3 )]
margin_bottom = -1.0

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 131.344, 277.76 )

[node name="AnimationTree" parent="Player" index="1"]
parameters/playback = SubResource( 1 )

[node name="Claws" parent="Player/BodyPivot/Body" index="2"]
rotation = 0.00162295

[node name="ClawsLeftGrip" parent="Player/BodyPivot/Body/Claws/ClawsLeft/ClawsLeftBase/ClawsLeftTip" index="0"]
rotation = 0.00125988

[node name="ClawsRightGrip" parent="Player/BodyPivot/Body/Claws/ClawsRight/ClawsRightBase/ClawsRightTip" index="0"]
rotation = 0.0

[node name="Enemy" parent="." instance=ExtResource( 5 )]
editor/display_folded = true
position = Vector2( 650.37, 260.416 )

[node name="BodyPivot" parent="Enemy" index="2"]
editor/display_folded = false

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="background_sandyShallows" type="Sprite" parent="BackgroundLayer"]
position = Vector2( 666.907, 239.123 )
scale = Vector2( 0.862623, 0.847292 )
texture = ExtResource( 6 )

[node name="GameTimer" type="Timer" parent="."]
wait_time = 45.0
one_shot = true

[node name="GameOverLabel" type="Label" parent="."]
visible = false
margin_left = 194.501
margin_top = 167.514
margin_right = 545.501
margin_bottom = 316.514
size_flags_vertical = 1
theme = ExtResource( 7 )
align = 1
valign = 1
autowrap = true

[node name="GameOverLabelBg" type="NinePatchRect" parent="GameOverLabel"]
modulate = Color( 0.223529, 0.215686, 0.247059, 0.584314 )
show_behind_parent = true
margin_left = -3.16412
margin_top = -2.98654
margin_right = 350.836
margin_bottom = 151.013
texture = ExtResource( 8 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
autoplay = true
[connection signal="dead" from="Player" to="." method="_on_Player_dead"]
[connection signal="health_changed" from="Player/Health" to="InterfaceLayer/Interface" method="_on_Health_health_changed"]
[connection signal="player_moved" from="Player/StateMachine/Move" to="." method="_on_Move_player_moved"]
[connection signal="player_moved" from="Player/StateMachine/Move" to="Enemy" method="_on_Player_Move_player_moved"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]

[editable path="Boundary2"]

[editable path="Boundary3"]

[editable path="InterfaceLayer/Interface"]

[editable path="Player"]

[editable path="Enemy"]
